<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="track_name">Название композиции</string>
    <string name="artist_name">Имя исполнителя</string>
    <string name="track_time">Продолжительность трека</string>
    <string name="track_time2">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="empty_search">Ничего не нашлось</string>
    <string name="net_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="net_connection_error">Отсутствует подключение к интернету</string>
    <string name="update_search">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share_app_text">Курс Android-разработчик расширенный: https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="support_email">aleks.agn@gmail.com</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="library">Медиатека</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="btn_new_playlist">Новый плейлист</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="playlist_creator_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_creator_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_creator_dialog_cancel">Отмена</string>
    <string name="playlist_creator_dialog_finish">Завершить</string>
    <string name="track_сount">Количество треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist">Плейлист</string>
    <string name="create">создан</string>
    <string name="update">обновлен</string>
    <string name="empty_image">Изображение не выбрано</string>
    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="one_track">трек</string>
    <string name="few_tracks">трека</string>
    <string name="many_tracks">треков</string>
    <string name="one_minute">минута</string>
    <string name="few_minutes">минуты</string>
    <string name="many_minutes">минут</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист?</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="edit">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="permission_message">Приложению необходимо дополнительное разрешение для показа уведомлений</string>

</resources>