<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingHorizontal="@dimen/medium_padding_2"
    android:paddingTop="@dimen/medium_padding_1"
    android:paddingBottom="@dimen/big_padding_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <Button
        android:id="@+id/btn_search"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        style="@style/Button" />

    <Button
        android:id="@+id/btn_library"
        android:text="@string/library"
        app:icon="@drawable/ic_library"
        style="@style/Button" />

    <Button
        android:id="@+id/btn_settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        style="@style/Button" />

</LinearLayout>