<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondaryVariant"
    android:paddingBottom="@dimen/big_padding_1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        app:titleTextAppearance="@style/SearchToolbar.Title"
        style="@style/SearchToolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/medium_padding_1"
        android:paddingHorizontal="@dimen/medium_padding_2">

        <EditText
            android:id="@+id/search_field"
            android:hint="@string/search"
            style="@style/SearchField" />

        <ImageView
            android:id="@+id/btn_clear"
            android:visibility="gone"
            style="@style/ClearButton" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/medium_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/placeholder_nothing_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView style="@style/EmptySearchIcon" />

        <TextView
            android:text="@string/empty_search"
            style="@style/EmptySearchText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_net_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView style="@style/NetErrorIcon" />

        <TextView
            android:text="@string/net_error"
            style="@style/NetErrorText" />

        <Button
            android:id="@+id/btn_update"
            android:text="@string/update_search"
            style="@style/UpdateButton" />
    </LinearLayout>

</LinearLayout>