<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/small_padding"
    android:paddingHorizontal="@dimen/medium_padding_1">

    <ImageView
        android:id="@+id/track_logo"
        android:layout_width="@dimen/track_image_edge"
        android:layout_height="@dimen/track_image_edge" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name"
            style="@style/TrackName"
            tools:text="@string/track_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artist_name"
                style="@style/TrackDescription"
                tools:text="@string/artist_name" />

            <ImageView
                android:src="@drawable/ic_dot"
                style="@style/ImageDot" />

            <TextView
                android:id="@+id/track_time"
                style="@style/TrackDescription"
                tools:text="@string/track_time" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/go_over"
        android:src="@drawable/ic_arrow_forward"
        style="@style/GoOverButton" />

</LinearLayout>