<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    tools:context=".PlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/player_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/PlayerToolbar" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintTop_toBottomOf="@id/player_toolbar"
        app:srcCompat="@drawable/ic_track_placeholder" />

    <TextView
        android:id="@+id/track_name"
        style="@style/PlayerTrackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintTop_toBottomOf="@+id/cover" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/PlayerArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintBottom_toTopOf="@id/btn_play"
        app:layout_constraintTop_toBottomOf="@+id/track_name" />

    <ImageButton
        android:id="@+id/btn_play"
        style="@style/PlayButton"
        android:background="?attr/colorSecondaryVariant"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintBottom_toTopOf="@id/current_track_time"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <ImageButton
        android:id="@+id/btn_queue"
        style="@style/QueueButton"
        android:background="?attr/colorSecondaryVariant"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toTopOf="@id/btn_play"
        app:layout_constraintBottom_toBottomOf="@id/btn_play" />

    <ImageButton
        android:id="@+id/btn_favorite_border"
        style="@style/FavoriteBorderButton"
        android:background="?attr/colorSecondaryVariant"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintTop_toTopOf="@id/btn_play"
        app:layout_constraintBottom_toBottomOf="@id/btn_play" />

    <TextView
        android:id="@+id/current_track_time"
        style="@style/CurrentTrackTime"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintBottom_toTopOf="@id/track_time_text"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/texts_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="trackTimeTag, collectionNameTag, releaseDateTag, primaryGenreNameTag, countryTag"
        app:barrierDirection="end" />

    <TextView
        android:id="@+id/track_time_text"
        app:layout_constraintTag="trackTimeTag"
        style="@style/TrackPropertiesText"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/current_track_time"
        android:text="@string/track_time2" />

    <TextView
        android:id="@+id/collection_name_text"
        app:layout_constraintTag="collectionNameTag"
        style="@style/TrackPropertiesText"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/track_time_text"
        android:text="@string/collection_name" />

    <TextView
        android:id="@+id/release_date_text"
        app:layout_constraintTag="releaseDateTag"
        style="@style/TrackPropertiesText"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/collection_name_text"
        android:text="@string/release_date" />

    <TextView
        android:id="@+id/primary_genre_name_text"
        app:layout_constraintTag="primaryGenreNameTag"
        style="@style/TrackPropertiesText"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/release_date_text"
        android:text="@string/primary_genre_name" />

    <TextView
        android:id="@+id/country_text"
        app:layout_constraintTag="countryTag"
        style="@style/TrackPropertiesText"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/primary_genre_name_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/country" />

    <TextView
        android:id="@+id/track_time"
        style="@style/TrackProperties"
        app:layout_constraintBaseline_toBaselineOf="@id/track_time_text"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/texts_barrier" />

    <TextView
        android:id="@+id/collection_name"
        style="@style/TrackProperties"
        app:layout_constraintBaseline_toBaselineOf="@id/collection_name_text"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/texts_barrier" />

    <TextView
        android:id="@+id/release_date"
        style="@style/TrackProperties"
        app:layout_constraintBaseline_toBaselineOf="@id/release_date_text"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/texts_barrier" />

    <TextView
        android:id="@+id/primary_genre_name"
        style="@style/TrackProperties"
        app:layout_constraintBaseline_toBaselineOf="@id/primary_genre_name_text"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/texts_barrier" />

    <TextView
        android:id="@+id/country"
        style="@style/TrackProperties"
        app:layout_constraintBaseline_toBaselineOf="@id/country_text"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/texts_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>