<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    tools:context=".ui.library.PlaylistCreatorFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/playlist_creator_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/PlaylistCreatorToolbar" />

    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="26dp"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/playlist_creator_toolbar"
        android:background="@drawable/playlist_creator_image_background"
        app:srcCompat="@drawable/ic_playlist_creator_placeholder"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AddPlaylistInputEditTextStyle"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:id="@+id/playlist_title_input_layout"
        android:layout_marginTop="32dp"
        android:paddingStart="@dimen/medium_padding_2"
        android:paddingEnd="@dimen/medium_padding_2"
        app:boxCollapsedPaddingTop="0dp"
        android:hint="@string/playlist_title"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            style="@style/EditTextCursorStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AddPlaylistInputEditTextStyle"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:id="@+id/playlist_description_input_layout"
        android:layout_marginTop="16dp"
        android:paddingStart="@dimen/medium_padding_2"
        android:paddingEnd="@dimen/medium_padding_2"
        android:hint="@string/playlist_description"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/playlist_title_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            style="@style/EditTextCursorStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/create_playlist"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textSize="@dimen/menu_text_size"
        android:background="@drawable/ic_btn_add_new_playlist"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>